--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+@keyframes pisca {
+    0% {opacity: 0.2;}
+    50% {opacity: 1; }
+    100% {opacity: 0.2;}
+}
 body {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 .urna {
     background-color: #dbd5c9;
@@ -14,7 +19,9 @@ body {
     width: 500px;
     height: 320px;
     background: linear-gradient(to right, #E8E8E8, #C1C1C1);
-    border: 2px solid #ccc;
+    border: 2px solid #000;
+    display: flex;
+    flex-direction: column;
 
 }
 .teclado {
@@ -37,7 +44,6 @@ body {
     align-items: center;
     margin: 10px;
     cursor: pointer;
-
 }
 .teclado-botao:hover {
     box-shadow: 2px 2px 3px 2px rgba(247, 219, 219, 0.678), 2px 2px 3px 2px rgba(247, 219, 219, 0.678);
@@ -58,4 +64,71 @@ body {
     font-size: 15px;
     width: 90px;
     height: 50px;
+}
+.d-1 {
+    flex: 1;
+    display: flex;
+}
+.d-1-left {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+.d-1-1 {
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+.d-1-2 {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.d-1-3 {
+    height: 50px;
+}
+.d-1-4 {
+    flex: 1;
+    line-height: 30px;
+}
+.numero {
+    display: inline-block;
+    width: 30px;
+    height: 40px;
+    border:1px solid #000;
+    text-align: center;
+    line-height: 40px;
+    font-size: 25px;
+}
+.pisca {
+    animation-name: pisca;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+.d-2 {
+    border-top: 2px solid #000;
+    height: 50px;
+    font-size: 14px;
+    padding-left: 14px;
+}
+.d-1-right {
+    width: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.d-1-image {
+    background-color: #fff;
+    text-align: center;
+    font-size: 14px;
+    border: 1px solid #000;
+}
+.d-1-image img {
+    width: 100%;
+}
+.d-1-image.small {
+    width: 80%;
+    font-size: 12px;
 }
