--- a/style.css
+++ b/style.css
@@ -25,8 +25,22 @@ body {
 
 }
 .aviso-nulo-branco {
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 35px;
+    font-weight: 600;
+    padding: 10px;
+    color: rgba(0, 0, 0, .6);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.aviso-fim {
+    font-size: 70px;
+    font-weight: 900;
+    color: rgba(0, 0, 0, .6);
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .teclado {
     background-color: #403a3a;
